LIBASPACE-394. Updated Dockerfiles for ArchivesSpace 4.1.1
Updated "Dockerfile" using the same base image (ubuntu:22.04) as the
ArchivesSpace Dockerfile from

https://github.com/archivesspace/archivesspace/blob/v4.1.1/Dockerfile

but it is significantly customized to support UMD's setup.

Updated "Dockerfile-solr" to conform with the ArchivesSpace 4.1.1
version in https://github.com/archivesspace/archivesspace/blob/v4.1.1/solr/Dockerfile
with the addition on directives to ensure that the "archivesspace"
Solr core is created.

https://umd-dit.atlassian.net/browse/LIBASPACE-394